srcManaged/objects/AffiliationSecurityRule__c.object
<CustomObject>
    <description>Represents a security rule based on the affiliations object.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Organization that this type of affiliation has a relationship to.</description>
        <inlineHelpText>Organization that this type of affiliation has a relationship to.</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliation Security Rules</relationshipLabel>
        <relationshipName>Affiliation_Security_Rules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Describes what this rule is for.</description>
        <inlineHelpText>Description of what this rule is for.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OverrideVip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this security rule will grant access to a record regardless of the record&apos;s VIP status.</description>
        <inlineHelpText>If checked, this security rule will grant access to a record regardless of the record&apos;s VIP status.</inlineHelpText>
        <label>Override VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tells whether this affiliation type must be primary or not.</description>
        <inlineHelpText>Tells whether this affiliation type must be primary or not.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role of this affiliation type.</description>
        <inlineHelpText>Role of this affiliation type.</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SecurityFieldNameLower__c</fullName>
        <description>Formula for lowercase version of the Security Field Name.</description>
        <formula>LOWER(SecurityFieldName__c)</formula>
        <label>Security Field Name Lower</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecurityFieldName__c</fullName>
        <description>Name of the checkbox field on the administrative account that controls access for this security rule.</description>
        <inlineHelpText>Name of the checkbox field on the administrative account that controls access for this security rule.</inlineHelpText>
        <label>Security Field Name</label>
        <length>43</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of this affiliation type.</description>
        <inlineHelpText>Status of this affiliation type.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Former</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Affiliation Security Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Role__c</columns>
        <columns>Status__c</columns>
        <columns>Primary__c</columns>
        <columns>OverrideVip__c</columns>
        <columns>SecurityFieldName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASR-{000000}</displayFormat>
        <label>Affiliation Security Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliation Security Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>